--- a/infrastructure/pages/login/login.css
+++ b/infrastructure/pages/login/login.css
@@ -1,8 +1,24 @@
+@import url(../../assets/css/global.css);
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.rounded-left{
+  border-top-left-radius: 24px !important;
+  border-bottom-left-radius: 24px !important;
+}
+
+.rounded-right{
+  border-top-right-radius: 24px !important;
+  border-bottom-right-radius: 24px !important;
+}
+
+.bg-white{
+  background-color: #f2f2f2;
 }
 
 .container-login {
@@ -33,7 +49,7 @@
 }
 
 .content-box .form-box {
-  width: 50%;
+  width: 90%;
 }
 
 .content-box .form-box .ul {
